# api-response

./: Cargo.toml  README.md  publish.sh
api-code-macros/: Cargo.toml
api-code-macros/src/: lib.rs
api-code-macros/tests/: gen.rs
api-response-macros/: Cargo.toml
api-response-macros/src/: enum_digits.rs  lib.rs
api-response-macros/tests/: gen.rs
examples/: mix.rs  normal.rs  salvo.rs
src/: error.rs  error_code.rs  error_status.rs  lib.rs  lite.rs  meta.rs  result.rs  salvo_trait.rs  success.rs  try_trait.rs  utils.rs
src/error_code/: codes.rs  collect.rs  errpath.rs  errtype.rs  ety_grpc.rs  helper.rs  http_status.rs  macros.rs  mod.rs  modpath.rs  segment.rs  tally.rs
src/examples/: salvo.rs
tests/: error_json.rs  success_json.rs
