[package]
name = "api-response"
version = "0.13.0"
edition = "2021"
license = "MIT"
description = "A consistent structure for API responses, including success and error handling."
repository = "https://github.com/andeya/api-response"
documentation = "https://docs.rs/api-response"
readme = "README.md"
keywords = ["api", "http", "rpc", "response"]
categories = ["web-programming", "data-structures"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
salvo = { version = ">=0.74", default-features = false, features = [
    "oapi",
], optional = true }
num_enum = "0.7"
http = ">=1"
inventory = "~0.3.16"
chrono = { version = ">=0.4", features = ["serde"] }
getset2 = ">=0.3.2"
api-code-macros = { path = "api-code-macros" }


[dev-dependencies]
serde_json = "^1.0"
tokio = { version = "^1.41" }
salvo = { version = ">=0.74", features = ["oapi"] }

[features]
# default = ["try", "salvo", "lite"]
salvo = ["dep:salvo"]
try = []
lite = []

[workspace]
members = ["api-code-macros"]
