[package]
name = "api-response"
version.workspace = true
description = "A consistent structure for API responses, including success and error handling."
documentation = "https://docs.rs/api-response"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-response-macros.workspace = true
serde = { version = "1", features = ["derive"] }
salvo = { version = ">=0.74", default-features = false, features = [
    "oapi",
], optional = true }
num_enum = "0.7"
http = ">=1"
chrono = { version = ">=0.4", features = ["serde"] }
getset2 = ">=0.4.0"
inventory = "~0.3.16"
serde_json = "1"
quick-xml = { version = "0.37.2", features = ["serialize"] }

[dev-dependencies]
serde_json = "^1.0"
tokio = { version = "^1.41" }
salvo = { version = ">=0.74", features = ["oapi"] }

[features]
# default = ["try", "salvo", "lite", "formatting_options"]
salvo = ["dep:salvo"]
try = []
lite = []
formatting_options = []

[workspace]
members = ["api-response-macros"]

[workspace.package]
version = "0.16.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/andeya/api-response"
readme = "README.md"
keywords = ["api", "http", "rpc", "response"]
categories = ["web-programming", "data-structures"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

[workspace.dependencies]
api-response-macros = { version = ">=0.16.1", path = "api-response-macros" }
