[package]
name = "api-response-macros"
description = "Macros for api-response crate"
documentation = "https://docs.rs/api-response-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = { version = "1", default-features = false }

[dev-dependencies]
num_enum = "0.7"
getset2 = "0.4"
